tests/NormalTests/paczka1/fuzzy1/38224659.err
Error in line 2: D1BYONP S831 38,0
Error in line 6: vRuQfznTm2 A898 75,1
Error in line 27: B3OQRA1Qs A898 82,6
